reajustadas todas las clases y test para cumplir todas las condiciones de test tras la corrupcion de datos